banner section complete

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header class="container">
         <!-- Navbar Start -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg py-3 bg-transparent">
             <div class="container-fluid">
                 <!-- Navbar Logo -->
                 <img src="./images/logo.png" alt="..." class="w-25">
@@ -57,7 +57,25 @@
         <!-- Navbar End -->
 
         <!-- Banner Start -->
-
+        <section class="container-fluid row row-cols-1 row-cols-lg-2 g-5">
+            <div>
+                <img src="./images/banner-shoe.png" alt="..." class="img-fluid">
+            </div>
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="text-center text-lg-start">
+                    <h1 class="display-1">
+                        <span class="text-orange">Nike React</span><br>
+                        <span class="text-black">Infinity Run 2</span>
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates deserunt magnam? Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, molestias!</p>
+                    <button class="btn btn-primary px-4">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </section>
         <!-- Banner End -->
     </header>
     <main>
