--- a/index.html
+++ b/index.html
@@ -78,16 +78,119 @@
         </section>
         <!-- Banner End -->
     </header>
-    <main>
+    <main class="container my-5">
         <!-- Sports Shoes Start -->
+        <h2 class="text-center text-lg-start my-5 ps-2">CASUAL SHOES</h2>
+        <div class="container text-center">
+            <div class="row g-5">
+
+                <div class="col-sm-1 col-lg-4 rounded-5">
+                    <div class="p-3 border bg-light">
+                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                        <div class="text-start">
+                            <h3>Nike Shoe</h3>
+                            <p>Lorem Ipsum is simply dummy text of the
+                                printing and typesetting industry</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h2>$234</h2>
+                            <button class="btn btn-primary">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-1 col-lg-4 rounded-5">
+                    <div class="p-3 border bg-light">
+                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                        <div class="text-start">
+                            <h3>Nike Shoe</h3>
+                            <p>Lorem Ipsum is simply dummy text of the
+                                printing and typesetting industry</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h2>$234</h2>
+                            <button class="btn btn-primary">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-1 col-lg-4 rounded-5">
+                    <div class="p-3 border bg-light">
+                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                        <div class="text-start">
+                            <h3>Nike Shoe</h3>
+                            <p>Lorem Ipsum is simply dummy text of the
+                                printing and typesetting industry</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h2>$234</h2>
+                            <button class="btn btn-primary">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Sports Shoes End-->
+
         <!-- Formal Shoes Start -->
+        <h2 class="text-center text-lg-start my-5 ps-2">FORMAL SHOES</h2>
+        <div class="container text-center">
+            <div class="row g-5">
+
+                <div class="col-sm-1 col-lg-4 rounded-5">
+                    <div class="p-3 border bg-light">
+                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                        <div class="text-start">
+                            <h3>Nike Shoe</h3>
+                            <p>Lorem Ipsum is simply dummy text of the
+                                printing and typesetting industry</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h2>$234</h2>
+                            <button class="btn btn-primary">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-1 col-lg-4 rounded-5">
+                    <div class="p-3 border bg-light">
+                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                        <div class="text-start">
+                            <h3>Nike Shoe</h3>
+                            <p>Lorem Ipsum is simply dummy text of the
+                                printing and typesetting industry</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h2>$234</h2>
+                            <button class="btn btn-primary">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-1 col-lg-4 rounded-5">
+                    <div class="p-3 border bg-light">
+                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                        <div class="text-start">
+                            <h3>Nike Shoe</h3>
+                            <p>Lorem Ipsum is simply dummy text of the
+                                printing and typesetting industry</p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h2>$234</h2>
+                            <button class="btn btn-primary">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Formal Shoes End -->
+
         <!-- Feature Part Start -->
         <!-- Feature Part End -->
     </main>
     <footer>
         <!-- Footer Section Start -->
+
         <!-- Footer Section End -->
     </footer>
 
