responsive issue fix

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img src="./images/banner-shoe.png" alt="..." class="img-fluid">
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <div class="text-center text-lg-start">
+                <div class="text-center">
                     <h1 class="display-1">
                         <span class="text-orange">Nike React</span><br>
                         <span class="text-black">Infinity Run 2</span>
@@ -80,12 +80,11 @@
     </header>
     <main class="container my-5">
         <!-- Sports Shoes Start -->
-        <h2 class="text-center text-lg-start my-5 ps-2">CASUAL SHOES</h2>
+        <h2 class="text-start my-5 ps-2">CASUAL SHOES</h2>
         <div class="container text-center">
             <div class="row g-5">
-
-                <div class="col-sm-1 col-lg-4 rounded-5">
-                    <div class="p-3 border bg-light">
+                <div class="col-sm-1 col-lg-4">
+                    <div class="p-3 border bg-light rounded">
                         <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
                         <div class="text-start">
                             <h3>Nike Shoe</h3>
@@ -99,11 +98,11 @@
                     </div>
                 </div>
 
-                <div class="col-sm-1 col-lg-4 rounded-5">
-                    <div class="p-3 border bg-light">
-                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                <div class="col-sm-1 col-lg-4">
+                    <div class="p-3 border bg-light rounded">
+                        <img src="./images/sports-shoe-2.png" alt="shoe" class="img-fluid">
                         <div class="text-start">
-                            <h3>Nike Shoe</h3>
+                            <h3>Sneakers Skate Shoe</h3>
                             <p>Lorem Ipsum is simply dummy text of the
                                 printing and typesetting industry</p>
                         </div>
@@ -114,11 +113,11 @@
                     </div>
                 </div>
 
-                <div class="col-sm-1 col-lg-4 rounded-5">
-                    <div class="p-3 border bg-light">
-                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                <div class="col-sm-1 col-lg-4">
+                    <div class="p-3 border bg-light rounded">
+                        <img src="./images/sports-shoe-3.png" alt="shoe" class="img-fluid">
                         <div class="text-start">
-                            <h3>Nike Shoe</h3>
+                            <h3>Sneakers Basketball shoe</h3>
                             <p>Lorem Ipsum is simply dummy text of the
                                 printing and typesetting industry</p>
                         </div>
@@ -133,15 +132,15 @@
         <!-- Sports Shoes End-->
 
         <!-- Formal Shoes Start -->
-        <h2 class="text-center text-lg-start my-5 ps-2">FORMAL SHOES</h2>
+        <h2 class="text-start my-5 ps-2">FORMAL SHOES</h2>
         <div class="container text-center">
             <div class="row g-5">
 
-                <div class="col-sm-1 col-lg-4 rounded-5">
-                    <div class="p-3 border bg-light">
-                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                <div class="col-sm-1 col-lg-4">
+                    <div class="p-3 border bg-light rounded">
+                        <img src="./images/formal-shoe-1.png" alt="shoe" class="img-fluid">
                         <div class="text-start">
-                            <h3>Nike Shoe</h3>
+                            <h3>Prestige High-Cut</h3>
                             <p>Lorem Ipsum is simply dummy text of the
                                 printing and typesetting industry</p>
                         </div>
@@ -152,11 +151,11 @@
                     </div>
                 </div>
 
-                <div class="col-sm-1 col-lg-4 rounded-5">
-                    <div class="p-3 border bg-light">
-                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                <div class="col-sm-1 col-lg-4">
+                    <div class="p-3 border bg-light rounded">
+                        <img src="./images/formal-shoe-2.png" alt="shoe" class="img-fluid">
                         <div class="text-start">
-                            <h3>Nike Shoe</h3>
+                            <h3>Slip-On Formal Shoe</h3>
                             <p>Lorem Ipsum is simply dummy text of the
                                 printing and typesetting industry</p>
                         </div>
@@ -167,11 +166,11 @@
                     </div>
                 </div>
 
-                <div class="col-sm-1 col-lg-4 rounded-5">
-                    <div class="p-3 border bg-light">
-                        <img src="./images/sports-shoe-1.png" alt="shoe" class="img-fluid">
+                <div class="col-sm-1 col-lg-4">
+                    <div class="p-3 border bg-light rounded">
+                        <img src="./images/formal-shoe-3.png" alt="shoe" class="img-fluid">
                         <div class="text-start">
-                            <h3>Nike Shoe</h3>
+                            <h3>Slip-On Formal Shoe</h3>
                             <p>Lorem Ipsum is simply dummy text of the
                                 printing and typesetting industry</p>
                         </div>
@@ -186,13 +185,69 @@
         <!-- Formal Shoes End -->
 
         <!-- Feature Part Start -->
+        <div class="d-flex flex-column-reverse flex-lg-row my-5 py-5 align-items-center">
+            <div class="left-side my-5">
+                <div class="container">
+                    <div class="row g-2 align-items-center shadow rounded">
+                        <div class="col-3">
+                            <div class="p-3">
+                                <img src="./images/icon-gift.png" alt="icon" class="w-100 p-3">
+                            </div>
+                        </div>
+                        <div class="col-9">
+                            <div class="p-3">
+                                <h4>Find the Perfect Fit</h4>
+                                <p>Everybody is different, which is why we offer styles for every body</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row g-2 align-items-center shadow rounded my-3">
+                        <div class="col-3">
+                            <div class="p-3">
+                                <img src="./images/icon-box.png" alt="icon" class="w-100 p-3">
+                            </div>
+                        </div>
+                        <div class="col-9">
+                            <div class="p-3">
+                                <h4>Find the Perfect Fit</h4>
+                                <p>Everybody is different, which is why we offer styles for every body</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row g-2 align-items-center shadow rounded">
+                        <div class="col-3">
+                            <div class="p-3">
+                                <img src="./images/icon-question.png" alt="icon" class="w-100 p-3">
+                            </div>
+                        </div>
+                        <div class="col-9">
+                            <div class="p-3">
+                                <h4>Find the Perfect Fit</h4>
+                                <p>Everybody is different, which is why we offer styles for every body</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right-side">
+                <img src="./images/isometric-image-shopping.png" alt="shopping" class="img-fluid p-5">
+            </div>
+        </div>
         <!-- Feature Part End -->
     </main>
-    <footer>
-        <!-- Footer Section Start -->
 
-        <!-- Footer Section End -->
+    <!-- Footer Section Start -->
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        </ul>
+        <p class="text-center text-muted">&COPY All Rights Reserved | Md. Shamim Sarker | 2022</p>
     </footer>
+    <!-- Footer Section End -->
 
     <!-- Bootstrap JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
