--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <div class="row g-2 align-items-center shadow rounded">
                         <div class="col-3">
                             <div class="p-3">
-                                <img src="./images/icon-gift.png" alt="icon" class="w-100 p-3">
+                                <img src="./images/icon-gift.png" alt="icon" class="w-100">
                             </div>
                         </div>
                         <div class="col-9">
@@ -204,7 +204,7 @@
                     <div class="row g-2 align-items-center shadow rounded my-3">
                         <div class="col-3">
                             <div class="p-3">
-                                <img src="./images/icon-box.png" alt="icon" class="w-100 p-3">
+                                <img src="./images/icon-box.png" alt="icon" class="w-100">
                             </div>
                         </div>
                         <div class="col-9">
@@ -217,7 +217,7 @@
                     <div class="row g-2 align-items-center shadow rounded">
                         <div class="col-3">
                             <div class="p-3">
-                                <img src="./images/icon-question.png" alt="icon" class="w-100 p-3">
+                                <img src="./images/icon-question.png" alt="icon" class="w-100">
                             </div>
                         </div>
                         <div class="col-9">
